css/main.css
.comfortaa{
    font-family: "Comfortaa", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
}

.emblema-one-regular {
    font-family: "Emblema One", system-ui;
    font-weight: 400;
    font-style: normal;
}


body{
    background-color: #d6a3ae !important;
    font-family: "Comfortaa", sans-serif; /* default font */
    color: #F2E0C7;
    margin: 0;
}

section{
    margin-top: 1%;
}

h1{ /* this is for page titles */
    font-family: "Emblema One", system-ui;
    font-size: 50px;
    color: #F2E0C7 !important;
    text-align: center;
    text-transform: capitalize !important;
}


h2{/* this is for subheadings */
    font-family: "Emblema One", system-ui;
    font-size: 24px;
    color: #F2E0C7;
    text-align: center;
    position: static;
}


h3{ /* movie titles */
    font-family: "Emblema One", system-ui;
    font-size: 35px;
    color: #F2E0C7;
    text-align: center;
    display: inline;
    background-color: #303030;

    margin: 0;
    margin-top: 9px;
    bottom: 10px;
    padding: 7px;
}

@media (max-width: 991.98px){ /*for smaller screens*/
    h1{
        font-size: 40px;
    }
    h3{
        font-size: 25px;
        margin-top: 10px;
        bottom: 10px;
        padding: 13.3px;
    }
}

.movie-title{/* MAKE TITLES INLINE WITH THE BUTTON HALVES */
    display: inline-flex;
    align-items: center;
    align-self: stretch;
}

button{
 border-color: transparent;
 background-color: transparent;
 border: none !important;
}

h4{
    font-size: 14px;
    font-family: "Comfortaa", sans-serif;
    color: #F2E0C7;
}

.pageTitle{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
}

@media (max-width: 991.98px){
    .pageTitle{
        opacity: 0;
    }
}
      

.navbar-toggle{
    border: none;
    padding: 0;
    border: 0;
}

.navbar-toggle img{
    height: 89px;
    border-radius: 15px;
}

.navbar-profile{
    font-family: "Comfortaa", sans-serif;
    font-size: 18px;
    color: #F2E0C7;
    background-color: #303030;
    padding: 2%;
    padding-right: 5%;
    border-radius: 15px;
    height: 89px;

    display: flex;
    align-items: center;
}

.navbar-header{
    background-color: #303030;
    margin: 0;
    padding-top: 5%;
    color: #F2E0C7;
    text-transform: capitalize;
}

.navbar-header img{
    height: 89px;
}

.offcanvas-body{
    background-color: #303030;
}

input[type="search"],
input[type="search"]:focus {
    border-radius: 15px;
    background-color: #F2E0C7;
    /* width: 300px; */

    font-family: "Comfortaa", sans-serif;
    font-size: 20px;
    color: #303030;

    outline: none;
    border: none;
    box-shadow: none;
}

.navbar-searchBar{
    width: 300px;
}

/* DO NOT TOUCH THIS PLEASE, THIS IS FOR THE STAR TO APEAR WHEN YOU HOVER ON NAV, PLEASE NO TOUCHY TOUCHY */

.navbar-nav {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px !important;
    padding: 0;
}
  
.navbar-nav .nav-item {
    position: relative;
    gap: 20px;
}
  
.navbar-nav .nav-link {
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
}

.nav-link h2:hover{
    color: #d6a3ae !important;
}
  
.navbar-nav .nav-link h2 {
    display: inline;        
    margin: 0;                  
}

.navbar-nav .nav-icon {
    height: 23px;
    opacity: 0;
    margin-right: 8px;
}
  
.navbar-nav .nav-link:hover .nav-icon {
    opacity: 1;                    
}  
  
.dropdown-menu{
    background-color: transparent;
    border: none;
    min-width: unset;
    width: auto;
}

/* this is for the carousel on the home page */
 
#splashContainer{
    width: 100%;
    overflow: hidden;
    margin: 0;
    padding: 0;
}
.movieFeature{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
}

.movie-feature{
    position: relative;
    border-radius: 15px;
}

#carouselFeature{
    width: 100%;
}

.feature-img{
    width: 100%;
}

.feature-img img{
    border-radius: 15px;

    width: 100%;
    height: auto;
    aspect-ratio: 16 / 9; /* optional, keeps consistent shape */
    object-fit: cover; /* prevents distortion */
    border-radius: 15px;
    display: block;
      
}

.feature-title{
    bottom: 30px;
    left: 16px;
}
.feature-img {
    position: relative;
    display: inline-block;
    width: 100%;
    overflow: hidden;
  }
  
  /* Overlay container over the image */
  .feature-overlay {
    position: absolute;
    bottom: 5%; /* adjust height placement */
    color: white;
  } 

  .starIcon{
    margin-right: 5px;
    height: 15px;
  }

  .category h4{
    margin-bottom: 0;
  }

.feature-info{
    margin: 0 !important;
    padding-bottom: 0 !important;
    margin-left: 15px !important;
}


.carousel-button{
    height: 32px;
    top: 35%;
}

/* CSS FOR BOOKMARK ICON */
.watchlistIconFeature{
    position: absolute;
    top: 35px !important;
    right: 15px !important;
    height: 57px;
    z-index: 5 !important;
}

.watchlistIcon{
    height: 57px;
    position: absolute;
}

.watchlistIcon img{
    height: 57px;
}

/* .starPicks{
    height: 450px;
} */

/* .movieCard-container{

} */
/*DO NOT TOUCH A THING*/

.scrolling-wrapper {
    overflow-x: scroll;
    overflow-y: hidden;
    white-space: nowrap;
    width: 100%;
    height: 500%;
    padding-top: 3%;
    padding-bottom: 3%;
  }

  .scrolling-wrapper .movieCard {
    display: inline-block;
  }

.movieContainer h2{
    margin-left:2%;
    text-align: start !important;
    margin-bottom: 0;
}


.movieCard {
    border-radius: 15px;
    cursor: pointer;
    background-color: #d6a3ae;
    overflow: hidden;
    /* width: 200px; */
    height: 326px;
    width: 222px;
}

.card-title{
    position: relative;
}

.movieInfo {
    position: absolute; /* absolute inside card */
    top: 0;
    left: 200px;
    width: 400px;
    height: 100%;
    color: #F2E0C7;
    padding: 15px;

    transform: translateX(100%); /*keep thingy hidden*/
    z-index: 3;
    opacity: 0;
    margin: 1em;
}

.movieCard:hover .movieInfo {
    transform: translateX(0);
    opacity: 1;
}


.moviePoster {
    flex: 0 0 200px;
    height: 326px; /* Add explicit height */
}

.moviePoster img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 15px;
    display: block;
}

/* Update media queries too */
@media (min-width: 768px) and (max-width: 991.98px){
    .moviePoster{
        height: 236px;
    }
}

@media (min-width: 992px) {
    .moviePoster{
        height: 326px;
    }
}

  .movieCard:hover {
    box-shadow: 0 8px 20px rgba(0,0,0,0.3);
    z-index: 10;
  }
  
  /* poster stays fixed */
  .moviePoster {
    flex: 0 0 200px; 
  }
  .moviePoster img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 15px 0 0 15px;
    display: block;
  }


    .moviePoster img{
        height: 326px;
        width: 222px;
    }
    
    .watchlistIcon{ /*THIS IS TO POSITION ON THE CARD*/
    left: 155px;
    top: 10px;
    }


.homeLibrary{
    position: relative;
    padding-bottom: 5em;
}





/* THIS IS FOR THE MOVIE LIBRARY/WISHLIST PAGES */
.filter-bar{
    background-color: #303030;
    margin: 2%;
    border-radius: 30px;
    padding: 1%;
}

.movie-searchBar{
    width: 400px !important;
}





/* THIS IS FOR THE INDIVIDUAL MOVIE PAGE */
.movie-container{
    margin-top: 3em;
    margin-bottom: 3em;
}

.poster-container{
    display: flex;
    flex-direction: column;
    align-items: center; 
    justify-content: center;
}

.movie-poster .movie-poster img{
    width: 100%;
    border-radius: 15px;
    background-color: #9F9F9F;
}

#individualPoster{
    width: 100%;
    border-radius: 15px;
    background-color: #9F9F9F;

}

.individual-watchlistIcon{
    position: absolute;
    top: 21%;
    left: 29%;
}

@media (max-width: 765px){
    .individual-watchlistIcon{
        top: 21%;
        left: 78%;
    }
}

.watchButton{
    height: 66px;
    margin-left: 1%;
    margin-top: 2%;
}

.trailerButton{
    height: 66px;
    margin-top: 2%;
}

.movie-info{
    gap: 1em;
    size: 100%;
    margin-left: 1%;
    margin-top: 2%;
    margin-bottom: 2%;
}

.category{
    padding: 10px;
    padding-left: 2em !important;
    padding-right: 2em !important;
    background-color: #303030;
    border-radius: 50px;
    text-align: center;
}

.movie-description{
    padding: 1em;
    margin-left: 1%;
    border-radius: 15px;
    background-color: #303030;
}

.movie-description h2{
    text-align: start;
}

.movie-actors, .movie-directors{
    padding: 1em;
    margin-left: 1%;
    margin-top: 3%;
    border-radius: 60px;
    background-color: #303030;
    margin-bottom: 0 !important;
}

.actor, .director{
    margin-bottom: 0 !important; 
}





/* display flex not on div around card > display block margin left auto margin right auto */

/* // No media query necessary for xs breakpoint as it’s effectively `@media (min-width: 0) { ... }`
@include media-breakpoint-up(sm) { ... }
@include media-breakpoint-up(md) { ... }
@include media-breakpoint-up(lg) { ... }
@include media-breakpoint-up(xl) { ... }
@include media-breakpoint-up(xxl) { ... }

// Usage

// Example: Hide starting at `min-width: 0`, and then show at the `sm` breakpoint */
/* // X-Small devices (portrait phones, less than 576px)
// No media query for `xs` since this is the default in Bootstrap

// Small devices (landscape phones, 576px and up)
@media (min-width: 576px) { ... }

// Medium devices (tablets, 768px and up)
@media (min-width: 768px) { ... }

// Large devices (desktops, 992px and up)
@media (min-width: 992px) { ... }

// X-Large devices (large desktops, 1200px and up)
@media (min-width: 1200px) { ... }

// XX-Large devices (larger desktops, 1400px and up)
@media (min-width: 1400px) { ... } */

